varios overflow fix

--- a/WebApplication1/Content/personalizacion/EstiloUno/product_item.css
+++ b/WebApplication1/Content/personalizacion/EstiloUno/product_item.css
@@ -4,7 +4,7 @@
             box-shadow: 0 5px 10px #aaa;
 
   float: left;
-  height: 325px;
+  height: 329px;
   margin: 15px;
   position: relative;
   width: 230px;
